--- a/views/cases/_opened-partial.njk
+++ b/views/cases/_opened-partial.njk
@@ -13,11 +13,11 @@
       id: "opened-cases-table",
       data: data,
       columns: [
-        { key: "fullName", text: t.components.table.columns.name, link: "/cases/{{caseReference}}/client-details" },
-        { key: "caseReference", text: t.components.table.columns.caseId },
-        { key: "dateOfBirth", text: t.components.table.columns.dateOfBirth },
-        { key: "refCode", text: t.components.table.columns.details },
-        { key: "lastModified", text: t.components.table.columns.dateModified, sortable: true, classes: "govuk-table__header--numeric" , cellClasses: "govuk-table__cell--numeric" }
+        { key: "fullName", text: t('components.table.columns.name'), link: "/cases/{{caseReference}}/client-details" },
+        { key: "caseReference", text: t('components.table.columns.caseId') },
+        { key: "dateOfBirth", text: t('components.table.columns.dateOfBirth') },
+        { key: "refCode", text: t('components.table.columns.details') },
+        { key: "lastModified", text: t('components.table.columns.dateModified'), sortable: true, classes: "govuk-table__header--numeric" , cellClasses: "govuk-table__cell--numeric" }
       ],
       sortBy: "lastModified",
       sortOrder: sortOrder or "desc",
