--- a/views/main/error.njk
+++ b/views/main/error.njk
@@ -1,6 +1,6 @@
 {% extends "base.njk" %}
 
-{% block pageTitle %}{{ t.pages.error.pageTitle | replace('{serviceName}', config.SERVICE_NAME) }}{% endblock %}
+{% block pageTitle %}{{ t('pages.error.pageTitle', { serviceName: config.SERVICE_NAME }) }}{% endblock %}
 
 {% set mainClasses = "govuk-main-wrapper--l" %}
 
