--- a/views/case_details/edit-date-of-birth.njk
+++ b/views/case_details/edit-date-of-birth.njk
@@ -10,46 +10,46 @@
 
 {% block backLink %}
   {{ govukBackLink({
-      text: t.common.back,
+      text: t('common.back'),
       href: "/cases/" + caseReference + "/client-details",
       classes: "govuk-!-margin-bottom-0"
     }) }}
 {% endblock %}
 
 {% block pageContent %}
-  
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      
+
       {% if errorState.hasErrors %}
         {{ govukErrorSummary({
-          titleText: t.common.errorSummaryTitle,
+          titleText: t('common.errorSummaryTitle'),
           errorList: errorState.errors
         }) }}
       {% endif %}
-      
+
       <form method="POST" action="/cases/{{ caseReference }}/client-details/change/date-of-birth">
-        
+
         <!-- CSRF Protection -->
-        <input type="hidden" name="_csrf" value="{{ csrfToken }}" />
-        
+        <input type="hidden" name="_csrf" value="{{ csrfToken }}"/>
+
         <!-- Original values for change detection -->
-        <input type="hidden" name="originalDay" value="{{ originalData.day }}" />
-        <input type="hidden" name="originalMonth" value="{{ originalData.month }}" />
-        <input type="hidden" name="originalYear" value="{{ originalData.year }}" />
-        
+        <input type="hidden" name="originalDay" value="{{ originalData.day }}"/>
+        <input type="hidden" name="originalMonth" value="{{ originalData.month }}"/>
+        <input type="hidden" name="originalYear" value="{{ originalData.year }}"/>
+
         {{ govukDateInput({
           id: "dateOfBirth",
           namePrefix: "dateOfBirth",
           fieldset: {
             legend: {
-              text: t.forms.clientDetails.dateOfBirth.legend,
+              text: t('forms.clientDetails.dateOfBirth.legend'),
               isPageHeading: true,
               classes: "govuk-fieldset__legend--l govuk-!-margin-bottom-6"
             }
           },
           hint: {
-            text: t.forms.clientDetails.dateOfBirth.hint
+            text: t('forms.clientDetails.dateOfBirth.hint')
           },
           errorMessage: {
             html: inlineErrorMessage | replace('\n', '<br>')
@@ -65,7 +65,7 @@
               }
             },
             {
-              name: "month", 
+              name: "month",
               classes: "govuk-input--width-2" + (" govuk-input--error" if highlightMonth),
               value: formData.month,
               attributes: {
@@ -87,14 +87,13 @@
 
         <div class="govuk-button-group">
           {{ govukButton({
-            text: t.common.save
+            text: t('common.save')
           }) }}
-          <a class="govuk-link" href="/cases/{{ caseReference }}/client-details">{{ t.common.cancel }}</a>
+          <a class="govuk-link" href="/cases/{{ caseReference }}/client-details">{{ t('common.cancel') }}</a>
         </div>
 
-        
       </form>
-      
+
     </div>
   </div>
 {% endblock %}
