--- a/views/components/errorSummaryComponent.njk
+++ b/views/components/errorSummaryComponent.njk
@@ -15,7 +15,7 @@
 #}
 {% from "govuk/components/error-summary/macro.njk" import govukErrorSummary %}
 
-{% macro errorSummary(errorList, titleText="There is a problem") %}
+{% macro errorSummary(errorList, titleText= t('components.errorSummary.title')) %}
   {{ govukErrorSummary({
     titleText: titleText,
     errorList: errorList
